--- a/test/values.yaml
+++ b/test/values.yaml
@@ -1,4 +1,4 @@
-appName: mock-app
+appName: mock-app2
 message: "Interesting learning curve, keep going !"
 image:
   repository: benmalekarim/mock-app
