--- a/test/values.yaml
+++ b/test/values.yaml
@@ -1,6 +1,2 @@
-appName: mock-app2
+appName: test-app
 message: "Interesting learning curve, keep going !"
-image:
-  repository: benmalekarim/mock-app
-  tag: v1.0.0
-replicas: 1
