--- a/test/Chart.yaml
+++ b/test/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 appVersion: 1.16.0
 description: A Helm chart for Kubernetes
-name: mock-app-canary
+name: test-app-canary
 type: application
 version: 1.0.0
